# qactl

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mcp.example.json  pyproject.toml
.claude/skills/work-issue/: SKILL.md
.cursor/rules/: communication-brevity.mdc  repo-workflow.mdc  short-prompt-issue-trigger.mdc  ssh-vs-cli.mdc
.cursor/skills/work-issue/: SKILL.md
.github/workflows/: ci.yml
bug-hunt/: 01-session-transport.md  02-async-jobs-tarload-techsupport.md  03-backup-restore.md  04-edit-templates-scale.md  05-discovery-devices-ops.md  06-logs-traces-dispatch.md  FINDINGS.md  _context.md
dnctl/: __init__.py  __main__.py
dnctl/cli/: __init__.py  app.py
dnctl/cli/core/: backup_store.py  capture_driver.py  capture_helpers.py  capture_store.py  commit_sequence.py  configure_commit.py  dnftp.py  edit_helpers.py  envelope.py  errors.py  event_spool.py  events.py  gnmi_links.py  jinja_store.py  job_store.py  jobs.py  locks.py  logging.py  mgmt0_verify.py  redact.py  registry.py  runner.py  session.py  shell.py  shell_exec.py  slack_notify.py  ts_store.py  validation.py
dnctl/cli/tools/: __init__.py  backup.py  capture.py  clear.py  cores.py  devices.py  discovery.py  edit.py  gitcommit.py  interfaces.py  log_read.py  monitor.py  ping.py  probe.py  raw.py  restart.py  shell.py  tarload.py  techsupport.py  templates.py  traces.py
dnctl/cli/vendors/: __init__.py  arista.py  cisco.py  dnos.py  gate.py  juniper.py  registry.py
dnctl/core/: __init__.py  auth.py  cli_probe.py  config.py  confirm.py  context.py  credentials.py  devices.py  dnftp.py  local_sftp.py  options.py  output.py  registry.py  request_log.py  setup_cmd.py  validators.py
dnctl/data/: devices_mgmt0.json  restconf_endpoints.json
dnctl/gnmi/: app.py
dnctl/gnmi/core/: request_log.py  session.py
dnctl/gnmi/tools/: devices.py  diag.py  rw.py  (+1 more)
dnctl/nc/: __init__.py  app.py
dnctl/rc/: __init__.py  app.py
ixia/: __init__.py  _discovery.py  models.py  session.py  stats.py  topology.py
ixia_core/: __init__.py  session.py
ixia_tools/: __init__.py  _ngpf_lookup.py  _vport_wait.py  bfd.py  build.py  config.py  diag.py  inspect.py  ports.py  rest.py  routes.py  run.py  stack.py  topology.py  traffic.py
ixiactl/: __init__.py  __main__.py
ixiactl/cli/: bfd.py  bgp.py  common.py  proto.py  rest.py  session_cmds.py  topo.py  traffic.py
qactl/: __init__.py  __main__.py
qactl/arista/: __init__.py  cli.py  client.py  tools.py
qactl/confluence/: __init__.py  cli.py  client.py  tools.py
qactl/console/: __init__.py  cli.py  tools.py
qactl/core/: __init__.py  common.py  creds.py  envelope.py  output.py  request_log.py
qactl/device42/: __init__.py  cli.py  client.py  console.py  tools.py
qactl/dnctl/: __init__.py  __main__.py
qactl/dnos/: __init__.py  __main__.py
qactl/ixia/: __init__.py
qactl/jenkins/: __init__.py  cli.py  client.py  tools.py
qactl/jira/: __init__.py  cli.py  client.py  tools.py
qactl/jobs/: __init__.py  cli.py  tools.py
qactl/mcp/: __init__.py  registry.py  server.py
qactl/orc/: __init__.py  cli.py  tools.py
qactl/power/: __init__.py  cli.py  client.py  tools.py
qactl/spirent/: README.md  __init__.py
tests/: conftest.py  test_arista.py  test_cli.py  test_console.py  test_device42.py  test_jira_add_comment.py  test_jira_servicedesk.py  test_jira_status_bulk.py  test_jobs.py  test_mcp.py  test_orc.py  test_power.py  test_spirent.py  test_standalone_deprecation.py
(+299 files in other folders)
