[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qactl"
version = "0.3.0"
description = "One agent-shaped tool for a QA workflow over CLI or stdio MCP: DNOS devices (cli/nc/gnmi/rc), Ixia traffic, Jira, Confluence, and Jenkins."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DriveNets" }]
keywords = ["dnos", "netconf", "gnmi", "restconf", "ixia", "ixnetwork",
            "jira", "confluence", "jenkins", "cli", "qa", "automation"]

dependencies = [
    # MCP front (stdio servers exposing the shared tool layer)
    "mcp>=1.2",
    # Atlassian / Jenkins (native groups)
    "requests>=2.28",
    # DNOS device groups (vendored dnctl)
    "typer>=0.12",
    "paramiko>=4.0.0",
    "jinja2>=3.1",
    "pyyaml>=5.4",
    "ncclient>=0.6.13",
    "lxml>=4.9.0",
    "pyang>=2.6.0",
    "pygnmi>=0.8.15",
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
    # Ixia traffic group (vendored ixiactl)
    "ixnetwork-restpy>=1.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
qactl = "qactl.__main__:main"

[tool.setuptools.packages.find]
include = ["qactl*", "dnctl*", "ixiactl*", "ixia*"]

[tool.setuptools.package-data]
"qactl.dnctl" = ["data/*.json"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
